--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  
   <style>
     body {
-      margin: 50px;
+      margin: 0;
       padding: 0;
       font-family: Inter, system-ui, sans-serif, Segoe UI, Roboto;
       color: black;
