--- a/index.html
+++ b/index.html
@@ -181,6 +181,12 @@ main .container div {
   text-decoration: none;
 }
 
+.elfsight-app-4fe7e8f2-3956-40d8-a971-a70e6276e6fd{
+  border-radius: 16px ;
+  border: 1px solid black ;
+  padding: 50px;
+}
+
   </style>
 </head>
 <body>
